feat(backend): 04_module
